# shrump

./: NOTES.md
services/: Makefile  docker-compose.yaml
services/etc/: keycloak-local.json
services/pin-reader/: .coverage  Dockerfile  Dockerfile-dev  LICENSE.md  composed.env  curr.vim  pyproject.toml
services/pin-reader/api/: config.py  constants.py  controllers.py  event_handlers.py  events.py  exceptions.py  logging.py  main.py  permissions.py  routers.py  schemas.py  storage.py  version.py
services/pin-reader/dev_tools/: dev_server.py  entrypoint.sh  show_env.py
services/pin-reader/tests/: coverage.xml  test_controllers.py  test_event_handlers.py  test_events.py  test_routers.py
services/pin-writer/: .coverage  Dockerfile-dev  Makefile  pyproject.toml
services/pin-writer/api/: config.py  constants.py  controllers.py  events.py  exceptions.py  logging.py  main.py  permissions.py  routers.py  schemas.py  security.py
services/pin-writer/dev_tools/: __init__.py
services/pin-writer/tests/: conftest.py  coverage.xml  test_controllers.py  test_events.py  test_routers.py
services/template/: pyproject.toml
services/template/alembic/: alembic.ini  env.py
services/template/alembic/versions/: 20241003_224741--2dc0dc8ec2ae_initial_migration.py
services/template/api/: config.py  constants.py  controllers.py  logging.py  main.py  models.py  permissions.py  routers.py  schemas.py  security.py  storage.py
services/template/dev_tools/: __init__.py  db.py  dev_server.py
services/template/tests/: conftest.py  test_controllers.py
